# people-flow

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_users.rs  m20260517_065426_applicants_table.rs
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs
src/middleware/: auth.rs
src/modules/: mod.rs
src/modules/applicants/: dto.rs  entity.rs  routes.rs  service.rs
src/modules/auth/: dto.rs  routes.rs  service.rs
src/modules/private/: mod.rs
src/modules/private/applicants/: dto.rs  routes.rs  service.rs
src/modules/private/enums/: mod.rs  project_type.rs  status.rs
src/modules/private/job/: dto.rs  entity.rs  mod.rs
src/modules/private/users/: routes.rs  service.rs
src/modules/public/auth/: service.rs
src/modules/users/: dto.rs  entity.rs  mod.rs
