[workspace]
members = [".", "migration"]
resolver = "2"

[package]
name = "people-flow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "people-flow"
path = "src/main.rs"

[dependencies]
# Web
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }

# Async
tokio = { version = "1", features = ["full"] }

# ORM
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono"] }

# JWT
jsonwebtoken = "9"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Errors
thiserror = "1"
anyhow = "1"

# Config
dotenvy = "0.15"

# Security
argon2 = "0.5"
rand = "0.8"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum-valid = "0.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
